--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "immutability-helper": "^3.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
@@ -17,6 +20,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "windicss-webpack-plugin": "^1.6.0"
   }
 }
