--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookstate/core": "^3.0.13",
     "immutability-helper": "^3.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
