--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookstate/core": "^3.0.13",
+    "classnames": "^2.3.1",
     "immutability-helper": "^3.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
+    "@types/webpack-env": "^1.16.3",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4",
